Update module name to ADVENTURE_DETAILS

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <!-- 1. Create the grid like layout as required. -->
     <div class="row">
       <div class="col-12 col-sm-6 col-lg-3 mb-3">
-        <a href="pages/adventures/">
+        <a href="/pages/adventures/">
         <div class="tile">
           <img src="assets/bengaluru.jpg">
           <div class="tile-text text-white text-center">
