--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
      <ul class="navbar-nav">
        <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
 
-       <li class="nav-item"><a href="/pages/adventures/" class="nav-link">Explore</a></li>
+       <li class="nav-item"><a href="/pages/adventures/index.html" class="nav-link">Explore</a></li>
      </ul>
      </div>
 
