--- a/pages/adventures/index.html
+++ b/pages/adventures/index.html
@@ -24,7 +24,7 @@
      </button>
       <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
         <ul class="navbar-nav">
-          <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="/index.html" class="nav-link">Home</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Explore</a></li>
         </ul>
       </div>
